change animation for popup, fix problem with jumping content

--- a/src/styles/state/_popup.scss
+++ b/src/styles/state/_popup.scss
@@ -24,16 +24,15 @@ $popup-btn-height: (btn-vertical-paddings($popop-btn-mobile-height) * 2) + $popu
 // Animation hide/show
 .b-popup_theme_toggle {
     &.mfp-bg {
-        transition-property: opacity;
         transition-timing-function: $gl-trs-function;
-        opacity: 0;
+        opacity: 1;
 
         &.mfp-ready {
             opacity: $popup-overlay-opacity;
         }
 
         &.mfp-removing {
-            opacity: 0;
+            opacity: 1;
         }
     }
 
